# CppStrategySim

./: .gitignore  Action.cpp  Action.h  ActionA.cpp  ActionA.h  ActionB.cpp  ActionB.h  ActiveObject.cpp  ActiveObject.h  CMakeLists.txt  Consequence.cpp  Consequence.h  IdHolder.cpp  IdHolder.h  ImplementationMapFiller.cpp  ImplementationMapFiller.h  ImplementationMapperObjAct.cpp  ImplementationMapperObjAct.h  Object.cpp  Object.h  ObjectA.cpp  ObjectA.h  ObjectB.cpp  ObjectB.h  README.md  build.sh  clean.sh  main.cpp  stdafx.h
headers/: Engine.h  Renderer.h  stdafx.h
headers/action_mapping/: ImplementationMapFiller.h  ImplementationMapperObjAct.h
headers/actions/: Action.h  ActionA.h  ActionB.h  InviteToMove.h
headers/objects/: FlagRtree.h  Forest.h  IdHolder.h  Object.h  ObjectA.h  ObjectB.h  Soldier.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  configurations.xml
nbproject/private/: private.xml
src/: Engine.cpp  Renderer.cpp  main.cpp
src/action_mapping/: ImplementationMapFiller.cpp  ImplementationMapperObjAct.cpp
src/actions/: Action.cpp  ActionA.cpp  ActionB.cpp  InviteToMove.cpp
src/objects/: Forest.cpp  IdHolder.cpp  Object.cpp  ObjectA.cpp  ObjectB.cpp  Soldier.cpp
tests/: CMakeLists.txt  tests.cpp
